# kaapana

./: .env_template  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .zenodo.json  AGPL.txt  CITATION.cff  CONTRIBUTE.md  CONTRIBUTION.md  LICENSE  README.md  constraints.txt  foo.txt  kaapanactl.sh  manage_openstack_volumes.py  pytest.ini  readthedocs.yml  test.py
build-scripts/: Dockerfile  README.md  build-config-template.yaml  build-configccc.yaml  build-configuration.yaml  (+18 more)
lib/kaapana_containers/: README.md  pyproject.toml
lib/kaapana_containers/kaapana_containers/docker/: utils.py
lib/kaapana_containers/kaapana_containers/kubernetes/: utils.py
lib/kaapana_oci/: pyproject.toml
lib/kaapana_oci/kaapana_oci/: cli.py  registry.py
lib/task_api/: Readme.md  pyproject.toml
lib/task_api/task_api/: cli.py  conftest.py  test_taskapi.py
lib/task_api/task_api/container_templates/downstream/: processing-container.json
lib/task_api/task_api/container_templates/downstream/files/: start.py
lib/task_api/task_api/container_templates/downstream/tasks/: test_downstream_with_env.json
lib/task_api/task_api/container_templates/dummy/: Dockerfile  processing-container.json
lib/task_api/task_api/container_templates/dummy/files/: start.py
lib/task_api/task_api/container_templates/dummy/tasks/: downstream-task.json  kubernetes_task.json  test_env_task.json  test_task.json  upstream-task.json
lib/task_api/task_api/processing_container/: ProcessingContainer.schema.json  Task.schema.json  common.py  create_json_schema.py  generate-models.sh  models.py  pc_models.py  resources.py  task_models.py
lib/task_api/task_api/processing_container/generated_models/: ContainerEnvVar_schema.py  IOChannel_schema.py  IOMount_schema.py  IOVolume_schema.py  LocalPath_schema.py  ProcessingContainer_schema.py  ScaleRule_schema.py  TaskInstance_schema.py  TaskRun_schema.py  TaskTemplate_schema.py  TaskTemplates_schema.py  Task_schema.py  __init__.py
lib/task_api/task_api/processing_container/pc_models/: TaskTemplateEnv_schema.py  TaskTemplate_schema.py
lib/task_api/task_api/processing_container/schemas/: ContainerEnvVar.schema.json  IOChannel.schema.json  IOMount.schema.json  IOVolume.schema.json  LocalPath.schema.json  ProcessingContainer.schema.json  Resources.schema.json  ScaleRule.schema.json  Task.schema.json  TaskInstance.schema.json  TaskRun.schema.json  TaskTemplate.schema.json  TaskTemplates.schema.json
lib/task_api/task_api/processing_container/task_models/: IOChannel_schema.py  IOVolume_schema.py  TaskEnvVar.py  TaskInstance_schema.py  TaskRun_schema.py  Task_schema.py
lib/task_api/task_api/runners/: DockerRunner.py  KubernetesRunner.py  base.py
lib/workflow_cli/: .gitignore  README.md  pyproject.toml  setup.py
lib/workflow_cli/workflow_cli/: __init__.py  cli.py  container_utils.py  generator.py  git_utils.py  packager.py  validators.py
lib/workflow_cli/workflow_cli/templates/: Chart.yaml.j2  README.md.j2  configmap.yaml.j2  job.yaml.j2  values.yaml.j2  workflow.json.j2
lib/workflow_cli/workflow_cli/templates/files/: demo_workflow_airflow.py
(+5482 files in other folders)
