[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kaapana-oci"
version = "0.1.0"
description = "A library for interacting with OCI Registries"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.24.0",
    "typer>=0.16.0",
]

[tool.poetry.group.dev.dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]