[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kaapana-workflow-cli"
version = "0.5.0"
description = "CLI tool for creating, validating, and packaging Kaapana workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kaapana Team"}
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
workflow-cli = "workflow_cli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["workflow_cli*"]

[tool.setuptools.package-data]
workflow_cli = [
    "templates/**/*", 
    "templates/**/**/*",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
